examples/test/testpolicy5750.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5750
  namespace: namespace30
spec:
  podSelector:
    matchLabels:
      key35: value39
      key31: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value24
          key0: value0
      podSelector:
        matchLabels:
          key4: value16
          key7: value20
